--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     </div>
     <div class="card-container">
       <div class="card"></div>
-      <div class="card yellow"></div>
-      <div class="card green"></div>
       <div class="card"></div>
-      <div class="card pink"></div>
-      <div class="card purple"></div>
-      <div class="card pink"></div>
-      <div class="card green"></div>
-      <div class="card blue"></div>
-      <div class="card blue"></div>
-      <div class="card orange"></div>
-      <div class="card turquoise"></div>
-      <div class="card yellow"></div>
-      <div class="card orange"></div>
-      <div class="card turquoise"></div>
-      <div class="card purple"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
     </div>
   </body>
 </html>
