--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Memory exercise</title>
-    <link href="memory.css" rel="stylesheet" type="text/css"/>
-    <script src="jquery.js"></script>
-    <script src="memory.js"></script>
+    <link href="css/memory.css" rel="stylesheet" type="text/css"/>
+    <script src="js/jquery.js"></script>
+    <script src="js/memory.js"></script>
   </head>
   <body>
     <div class="control-container">
